在家调整内容

--- a/src/App_content.css
+++ b/src/App_content.css
@@ -479,7 +479,8 @@
 }
 
 .rowmar{
-  margin: -12px 0px 0px !important;
+  /* 上，左右，下 */
+  margin: -12px -35px 0px !important;
   padding: 0px 0px;
   box-sizing: border-box;
 }
@@ -526,8 +527,36 @@
   width: 90%;
   margin: auto !important;
 }
-
-
+.app_bottom{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  height: 22px;
+  line-height: 22px;
+  text-align: center;
+  font-size: 12px;
+  color: #999;
+  background: #d3d3d3;
+  border-top: 1px solid #e9e9e9;
+  width: 100%;
+  
+}
+.app_bottom a{
+  color: #1890ff;
+  text-decoration: none;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+  -webkit-transition: color .3s;
+  transition: color .3s;
+  -webkit-text-decoration-skip: objects;
+}
+.app_bottom a:hover {
+  color: #40a9ff;
+}
+.app_bottom span{
+  margin-left: 10px;
+}
 /* 适应 */
 @media screen and (max-width: 768px) {
   
